--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ sqlx = { version = "0.7.4", features = [
     "rust_decimal",
     "macros",
 ] }
+sqlx-cli = "0.7.4"
 tokio = { version = "1.36.0", features = ["full"] }
