migrations are weird man

--- a/db/compose.yml
+++ b/db/compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   db:
     env_file: ../.env
+    container_name: sqweal-db
     image: postgres:latest
     restart: unless-stopped
     ports:
