--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DATABASE_PASSWORD=supersecret
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_NAME=sqweal
-DATABASE_URL=postgress://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+DATABASE_URL=postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 
 # postgres
 POSTGRES_USER=${DATABASE_USER}
