--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ oxydized-money = "0.3.0"
 oxydized-money-macros = "0.2.0"
 rust_decimal = "1.34.3"
 rust_decimal_macros = "1.34.2"
+serde = { version = "1.0.197", features = ["derive"] }
 sqlx = { version = "0.7.4", features = [
     "chrono",
     "postgres",
@@ -17,5 +18,4 @@ sqlx = { version = "0.7.4", features = [
     "rust_decimal",
     "macros",
 ] }
-sqlx-cli = "0.7.4"
 tokio = { version = "1.36.0", features = ["full"] }
