--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.77"
 dotenv = "0.15.0"
-iso_currency = { version = "0.4.4", features = ["serde"] }
+iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
 oxydized-money = "0.3.0"
 oxydized-money-macros = "0.2.0"
 rust_decimal = "1.34.3"
 rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 sqlx = { version = "0.7.4", features = [
     "chrono",
     "postgres",
