move test docker compose

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# sqlx
-DATABASE_USER=sqweal
-DATABASE_PASSWORD=supersecret
+# for sqlx
+DATABASE_USER=miniorm
+DATABASE_PASSWORD=welcome
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_NAME=sqweal
+DATABASE_NAME=miniorm
 DATABASE_URL=postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 
-# postgres
+# for postgres test container
 POSTGRES_USER=${DATABASE_USER}
 POSTGRES_PASSWORD=${DATABASE_PASSWORD}
 POSTGRES_DB=${DATABASE_NAME}
