--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,7 @@ rust_decimal = "1.34.3"
 rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = [
-    "chrono",
-    "postgres",
-    "runtime-tokio",
-    "rust_decimal",
-    "macros",
-] }
+sqlx = { version = "0.7.4", features = ["postgres", "macros"] }
 strum = { version = "0.26.2", features = ["derive"] }
 tokio = { version = "1.36.0", features = ["full"] }
 miniorm-macros = { path = "./macros" }
