--- a/examples/todo/Cargo.toml
+++ b/examples/todo/Cargo.toml
@@ -12,6 +12,6 @@ repository = "https://github.com/meuter/miniorm-rs"
 
 [dependencies]
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono"] }
-miniorm = { path = "../../" }
 dotenv = "0.15.0"
 tokio = { version = "1.36.0", features = ["full"] }
+miniorm = { version = "0.1.0", path = "../.." }
