--- a/examples/transactions/Cargo.toml
+++ b/examples/transactions/Cargo.toml
@@ -16,7 +16,6 @@ sqlx = { version = "0.7.4", features = [
     "rust_decimal",
     "runtime-tokio",
 ] }
-miniorm = { path = "../../" }
 dotenv = "0.15.0"
 tokio = { version = "1.36.0", features = ["full"] }
 iso_currency = { version = "0.4.4", features = ["with-serde"] }
@@ -24,3 +23,4 @@ rust_decimal = "1.34.3"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 rust_decimal_macros = "1.34.2"
+miniorm = { version = "0.1.0", path = "../.." }
