--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,19 @@ homepage = "https://github.com/meuter/miniorm-rs"
 repository = "https://github.com/meuter/miniorm-rs"
 
 [dependencies]
-dotenv = "0.15.0"
-iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
 itertools = "0.12.1"
+sqlx = { version = "0.7.4", features = ["postgres"] }
 miniorm-macros = { version = "0.4.0", path = "macros" }
+
+[workspace]
+members = ["macros"]
+
+[dev-dependencies]
+dotenv = "0.15.0"
+tokio = { version = "1.36.0", features = ["full"] }
+sqlx = { version = "0.7.4", features = [ "runtime-tokio", "chrono", "rust_decimal" ] }
 rust_decimal = "1.34.3"
 rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-sqlx = { version = "0.7.4", features = ["postgres", "macros"] }
-strum = { version = "0.26.2", features = ["derive"] }
-tokio = { version = "1.36.0", features = ["full"] }
-
-[workspace]
-members = ["examples/transactions", "examples/todo", "macros"]
+iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
