--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/meuter/miniorm-rs"
 
 [dependencies]
 itertools = "0.12.1"
-sqlx = { version = "0.7.4", features = ["postgres"] }
+sqlx = { version = "0.7.4", features = ["postgres", "sqlite"] }
 miniorm-macros = { version = "0.4.0", path = "macros" }
 
 [workspace]
@@ -21,7 +21,7 @@ members = ["macros"]
 [dev-dependencies]
 dotenv = "0.15.0"
 tokio = { version = "1.36.0", features = ["full"] }
-sqlx = { version = "0.7.4", features = [ "runtime-tokio", "chrono", "rust_decimal" ] }
+sqlx = { version = "0.7.4", features = [ "runtime-tokio", "chrono", "rust_decimal", "sqlite" ] }
 rust_decimal = "1.34.3"
 rust_decimal_macros = "1.34.2"
 serde = { version = "1.0.197", features = ["derive"] }
