--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build with default feature
         run: cargo build --workspace
+      - name: Build with all features
+        run: cargo build --workspace --all-features
+      - name: Build without any feature
+        run: cargo build --workspace --no-default-features
+
