started integrating MySql BUT...
- the example does not really work yet...

--- a/.env
+++ b/.env
@@ -1,13 +1,23 @@
-# for sqlx
+# common information
 DATABASE_USER=miniorm
 DATABASE_PASSWORD=welcome
 DATABASE_HOST=localhost
-DATABASE_PORT=5432
 DATABASE_NAME=miniorm
-DATABASE_URL=postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 
 # for postgres test container
 POSTGRES_USER=${DATABASE_USER}
 POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+POSTGRES_HOST=${DATABASE_HOST}
 POSTGRES_DB=${DATABASE_NAME}
+POSTGRES_PORT=5432
+POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${DATABASE_NAME}
+
+# for mysql test container
+MYSQL_ROOT_PASSWORD=${DATABASE_PASSWORD}
+MYSQL_USER=${DATABASE_USER}
+MYSQL_PASSWORD=${DATABASE_PASSWORD}
+MYSQL_DATABASE=${DATABASE_NAME}
+MYSQL_HOST=${DATABASE_HOST}
+MYSQL_PORT=3306
+MYSQL_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT}/${DATABASE_NAME}
 
