generate CREATE_TABLE and DROP_TABLE SQL at build time

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -15,6 +15,7 @@ proc-macro = true
 
 [dependencies]
 darling = "0.20.8"
+itertools = "0.12.1"
 proc-macro2 = "1.0.79"
 quote = "1.0.35"
 syn = "2.0.52"
