--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,20 @@ homepage = "https://github.com/meuter/miniorm-rs"
 repository = "https://github.com/meuter/miniorm-rs"
 
 [dependencies]
+async-trait = "0.1.79"
+axum = { version = "0.7.5", optional = true }
+miniorm-macros = { version = "0.4.0", path = "macros" }
 serde = { version = "1.0.197", optional = true }
 sqlx = { version = "0.7.4" }
-miniorm-macros = { version = "0.4.0", path = "macros" }
-async-trait = "0.1.79"
 
 [workspace]
 members = ["macros"]
 
 [features]
 default = ["postgres"]
-full = ["postgres", "sqlite", "mysql", "serde"]
+full = ["postgres", "sqlite", "mysql", "axum"]
 serde = ["dep:serde"]
+axum = ["dep:axum", "serde"]
 postgres = ["sqlx/postgres"]
 sqlite = ["sqlx/sqlite"]
 mysql = ["sqlx/mysql"]
