--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  unit_test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -15,3 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Test with default feature
         run: cargo test --workspace
+  integration_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Start Postgres and MySql sandbox
+        run: docker compose up -d
+      - name: Run all integration tests
+        run: cargo test -F integration_tests
+      - name: Stop Postgres sandbox
+        run: docker compose down
