--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ axum = ["dep:axum", "serde"]
 postgres = ["sqlx/postgres"]
 sqlite = ["sqlx/sqlite"]
 mysql = ["sqlx/mysql"]
+integration_tests = []
 
 [dev-dependencies]
 sqlx = { version = "0.7.4", features = [
@@ -46,3 +47,4 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
 miniorm = { path = ".", features = ["full"] }
+serial_test = "3.0.0"
