--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,4 @@ serde_json = "1.0.114"
 iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
 miniorm = { path = ".", features = ["full"] }
 serial_test = "3.0.0"
+axum-test = "14.8.0"
