pin `time` dependency to account for a breaking API change in Rust 1.80

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,3 +49,4 @@ iso_currency = { version = "0.4.4", features = ["serde", "with-serde"] }
 miniorm = { path = ".", features = ["full"] }
 serial_test = "3.0.0"
 axum-test = "14.8.0"
+time = "0.3.35"
