First working example with UUID

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -6,6 +6,12 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  uuid:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Todo (Sqlite)
+        run: cargo run --example uuid
   todos:
     runs-on: ubuntu-latest
     steps:
